# mcp-server-template

./: README.md  pyproject.toml
src/mcp_project/: __init__.py
src/mcp_project/core/: config.py  enums.py  logger.py  server.py  setup.py
src/mcp_project/core/auth/: github.py
src/mcp_project/servers/: __init__.py
src/mcp_project/servers/v1/: __init__.py  hello.py
tests/v1/: test_hello.py
