[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_project"
version = "0.1.0"
description = "MCP (Model Context Protocol) server implementation"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Don Setiawan", email = "don.setiawan@bitbarrel.io" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "uvicorn>=0.21.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=2.3.4", "pydantic-settings>=2.9.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.80",
    "pytest-asyncio>=0.26.0,<0.27"
]

[project.urls]
"Homepage" = "https://github.com/bitbarrellc/mcp-project"
"Bug Tracker" = "https://github.com/bitbarrellc/mcp-project/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_project"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
mcp_project = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
nodejs = ">=22.13.0,<22.14"
